package gserver;

option optimize_for = SPEED;
option java_package = "com.katesoft.gserver.domain";
option java_outer_classname = "Entities";

message ProtocolVersion {
	required uint32 major = 1;
	optional uint32 minor = 2;
	optional uint32 patch = 3;
}

//
// i18n support
//
message i18n {
	required string key = 1;
	required string value = 2;
}
//
//
//
enum NotificationType {
	ERROR = 1;
	INFO = 2;
	WARNING = 3;
}
//
// define most commonly used coins
//
enum Coin {
	ONE = 1;
	TWO = 2;
	FIVE = 3;
	TEN = 4;
	TWENTY_FIVE = 5;
	FIFTY = 6;
	HUNDRED = 7;
	FIVE_HUNDRED = 8;
	THOUSAND = 9;
	TEN_THOUSANDS = 10;
}
//
// coin + quantity
//
message CoinQuantitySlice {
	required Coin coin = 1;
	required uint32 quantity = 2;
}

message Coins {
	repeated Coin coins = 1;
}
//
// array of coin slices
//
message Bet {
	repeated CoinQuantitySlice slices = 1;
}
//
// return result of bet (win, lose, unsigned amount)
//
message BetResult {
	required Bet bet = 1;
	required bool win = 2;
	required uint32 amountUnsigned = 3;
}
//
// define minimal bet amount and maximum bet amount.
//
message BetLimits {
	extensions 10 to 100;
	required uint32 minBet = 1;
	required uint32 maxBet = 2;
	optional uint32 minPositionBet = 3;
	optional uint32 maxPositionBet = 4;
}
//
// commons player settings
//
message PlayerSettings {
	optional string displayName = 1;
	optional string prefLang = 2;
	optional string payoutCurrency = 3;
	optional string disableMusic = 4;
	optional string disableBackgroundSounds = 5;
}
//
// server settings.
// 1) protocol version (required)
// 2) tcp-send-buffer size in bytes (netty optimization)
// 3) tcp-receive-buffer size in bytes (netty optimization)
// 4) tcp-socket-linger (netty socket settings)
// 5) tcp-sockets bind address (which host and port to use for direct TCP persistent connections).
// 6) web-sockets bind address (which host and port to use for flash persistent connections).
// 7) flash-sockets bind address (which host and port to use for flash persistent connections).
// 8) websockets-context-path (actual context path for web-sockets, similar to war context path).
//
message ServerSettings {
	required ProtocolVersion protocolVersion = 1;
	optional uint32 tcpSendBufferSize = 2 [default = 1048576];
	optional uint32 tcpReceiveBufferSize = 3 [default = 1048576];
	optional uint32 tcpSocketLinger = 4 [default = 2048];
	optional string tcpBindAddress = 5 [default = '0.0.0.0:8190' ];
	optional string websocketsBindAddress = 6 [default = '0.0.0.0:8191'];
	optional string flashBindAddress = 7 [default = '0.0.0.0:8192'];
	optional string wsContextPath = 8 [default = '/websockets'];
}